# gitIntel-ai-analysis

./: .env.example  .gitignore  .npmrc  .prettierignore  Dockerfile.admin  Dockerfile.backend  Dockerfile.frontend  README.md  deploy.env.example  docker-compose.yml  github-actions-key  github-actions-key.pub  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
backend/: .env.example  .gitignore  dependencies.py  diagnose_memory.py  langsmith_local.py  main.py  pyproject.toml  requirements.txt  supabase_client.py
backend/agents/: __init__.py  architecture.py  base_agent.py  code_parser.py  dependency.py  fix_generator.py  optimization.py  prompts.py  quality.py  repo_loader.py  repo_loader_agent.py  suggestion.py  suggestion_agent.py  tech_stack.py
backend/graph/: __init__.py  analysis_graph.py  chat_graph.py  chat_state.py  executor.py  state.py
backend/memory/: __init__.py  chromadb_store.py  dashvector_store.py  embeddings.py  multi_memory.py
backend/middleware/: __init__.py  admin_auth.py  auth.py
backend/migrations/: 002_add_thread_id.sql  003_add_repo_sha.sql
backend/rag/: __init__.py  chat_pipeline.py  context_processor.py  generator.py  post_processor.py  query_processor.py  retriever.py
backend/routers/: __init__.py  analysis.py  chat.py  export.py  git_ops.py  history.py  pr.py  user.py
backend/schemas/: __init__.py  chat.py  history.py  multi_agent.py  request.py  response.py
backend/services/: database.py  pdf_service.py  rag_chat_service.py
backend/tests/: conftest.py
backend/tools/: __init__.py  (+4 more)
(+201 files in other folders)
